PIM-7483: fix activity navigation dropdown menu when the menu is collapsed

--- a/src/Pim/Bundle/UIBundle/Resources/public/less/components/Column.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/components/Column.less
@@ -237,4 +237,8 @@
     padding: 20px;
     text-align: center;
   }
+
+  &--firstColumn {
+    z-index: 803;
+  }
 }
